// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField should mount component and match snapshot 1`] = `
<div class="v-input">
  <div class="v-input__label">
    <label class="v-label v-label--on-input">
    </label>
  </div>
  <div class="v-input__text-field">
    <div class="v-text-field">
      <input class="v-text-field__input"
             type="text"
      >
    </div>
  </div>
  <div class="v-input__hints">
    <transition-stub name="fade"
                     mode
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`VTextField should test disabled state 1`] = `
<div class="v-input v-input--disabled">
  <div class="v-input__label">
    <label class="v-label v-label--disabled v-label--on-input">
      email
    </label>
  </div>
  <div class="v-input__text-field">
    <div class="v-text-field v-text-field--disabled">
      <input class="v-text-field__input"
             label="email"
             rules="function (val) {
                  return !!val || 'required input';
                }"
             color="orange darken-1"
             textcolor="#fa5a5a"
             disabled
             type="text"
      >
    </div>
  </div>
  <div class="v-input__hints">
    <transition-stub name="fade"
                     mode
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`VTextField should test non disabled state 1`] = `
<div class="v-input v-input--not-valid error--text">
  <div class="v-input__label">
    <label class="v-label v-label--on-input">
      email
    </label>
  </div>
  <div class="v-input__text-field">
    <div class="v-text-field">
      <input class="v-text-field__input"
             style="color: rgb(250, 90, 90);"
             modelvalue
             label="email"
             rules="function (val) {
                  return !!val || 'required input';
                }"
             color="orange darken-1"
             textcolor="#fa5a5a"
             type="text"
      >
    </div>
  </div>
  <div class="v-input__hints">
    <transition-stub name="fade"
                     mode
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <span class="v-input__hints-message">
        required input
      </span>
    </transition-stub>
  </div>
</div>
`;
